# striprouter-cpp

./: .gitignore  CMakeLists.txt  README.md  _clang-format  astyle_all.sh  cmake.sh  format-all.sh
libraries/header_only/cmdparser/: LICENSE  cmdparser.hpp
libraries/header_only/simple_svg/: LICENSE  simple_svg_1.0.0.hpp
src/: circuit.cpp  circuit.h  circuit_parser.cpp  circuit_parser.h  circuit_writer.cpp  circuit_writer.h  dijkstra.cpp  dijkstra.h  file_parser.cpp  file_parser.h  file_writer.cpp  file_writer.h  ga_core.cpp  ga_core.h  ga_interface.cpp  ga_interface.h  gl_error.cpp  gl_error.h  gui.cpp  gui.h  gui_status.cpp  gui_status.h  icon.cpp  icon.h  int_types.h  layout.cpp  layout.h  main.cpp  nets.cpp  nets.h  ogl_text.cpp  ogl_text.h  parser.cpp  parser.h  pcb.cpp  pcb.h  render.cpp  render.h  router.cpp  router.h  (+18 more)
src/shaders/: fill.vert  text.frag  text_background.frag  text_background.vert
